Removed margin-top on splash element Prevents bottom of splash to be hidden on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -40,7 +40,7 @@ a {
 .splash {
     width: 60%;
     height: 50%;
-    margin: auto;
+    margin: 0 auto;
     position: absolute;
     top: 100px;
     left: 0;
